--- a/src/pages/live/Live.css
+++ b/src/pages/live/Live.css
@@ -52,6 +52,14 @@
 
 .quit-btn-margin {
     margin-inline-start: 1rem;
+    margin-top: 0rem;
+}
+
+@media (max-width: 800px) {
+    .quit-btn-margin {
+        margin-inline-start: 0rem;
+        margin-top: 1rem;
+    }
 }
 
 .scroll-btn,
